--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Clinica Home</title>
+    <link rel="stylesheet" href="styles/reset.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100italic,100,300,300italic,400italic,500,500italic,700,700italic,900,900italic&subset=latin,vietnamese,cyrillic-ext,cyrillic,greek-ext,greek,latin-ext' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="styles/library.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
     <header>
         <div class="info-box">
             <div class="content clearfix">
@@ -106,6 +107,5 @@
             $('#picture-slider').slideShow();
         });
     </script>
-    
 </body>
 </html>
